configs/domserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domserver
  namespace: domjudge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domserver
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: domjudge
      labels:
        app: domserver
    spec:
      containers:
      - name: domserver
        image: domjudge/domserver:7.2.0
        livenessProbe:
          httpGet:
            path: /public
            port: 80
        readinessProbe:
          httpGet:
            path: /public
            port: 80
        ports:
          - containerPort: 80
        volumeMounts:
        - name: config-map
          mountPath: /tmp/config-map
        command:
        - bash
        - "-c"
        - |
          apt update
          apt install php-redis -y
          cp /tmp/config-map/php.ini /etc/php/7.3/fpm/php.ini
          /scripts/start.sh
      volumes:
      - name: config-map
        configMap:
          name: domserver
