configs/domserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: domserver
  namespace: domjudge
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: domserver
  type: NodePort
