configs/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: domjudge
spec:
  ports:
  - port: 6379
  selector:
    app: redis
  # clusterIP: None
